prefixes removed, paths to images updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="http://www.mamutlove.es/projects/pop-it/">
     <meta property="twitter:title" content="Pop-it. A simple modal box writen in JavaScript">
     <meta property="twitter:description" content="Pop-it. A simple #Vanilla #JavaScript plugin that launches a modal box where place your message">
-    <meta property="twitter:image" content="http://www.mamutlove.es/img/logo-mamutlove.jpg" />
+    <meta property="twitter:image" content="http://www.mamutlove.es/old/img/logo-mamutlove.jpg" />
     <meta property="twitter:site" content="@mamutlove">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,17 +31,6 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-21276425-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
 </head>
 
 <body>
@@ -58,39 +47,67 @@
         </aside>
         <section class="container">
             <div>
-                <h2><a href="http://iriacagigao.com/" title="Iria Cagigao">Iria Cagigao</a></h2>
-                <a href="http://iriacagigao.com/" title="Iria Cagigao"><img src="http://www.mamutlove.es/img/iriacagigao-responsive.jpg" alt="Iria Cagigao" width="920" height="350"></a>
+                <h2>
+                    <a href="http://iriacagigao.com/" title="Iria Cagigao">Iria Cagigao</a>
+                </h2>
+                <a href="http://iriacagigao.com/" title="Iria Cagigao">
+                    <img src="http://www.mamutlove.es/old/img/iriacagigao-responsive.jpg" alt="Iria Cagigao" width="920" height="350">
+                </a>
             </div>
             <div>
-                <h2><a href="http://www.mamutlove.es/stop-global-warming.html" title="Stop Global Warming">Stop Global Warming</a></h2>
-                <a href="http://www.mamutlove.es/stop-global-warming.html" title="Stop Global Warming"><img src="http://www.mamutlove.es/img/stopGlobalWarming.jpg" alt="Stop Global Warming" width="920" height="350"></a>
+                <h2>
+                    <a href="http://www.mamutlove.es/stop-global-warming.html" title="Stop Global Warming">Stop Global Warming</a>
+                </h2>
+                <a href="http://www.mamutlove.es/stop-global-warming.html" title="Stop Global Warming">
+                    <img src="http://www.mamutlove.es/old/img/stopGlobalWarming.jpg" alt="Stop Global Warming" width="920" height="350">
+                </a>
             </div>
             <div>
-                <h2><a href="http://www.mamutlove.es/republica-dominicana.html" title="República Dominicana">República Dominicana</a></h2>
-                <a href="http://www.mamutlove.es/republica-dominicana.html" title="República Dominicana"><img src="http://www.mamutlove.es/img/republica-dominicana-logo.gif" alt="República Dominicana" width="920"
-                        height="350"></a>
+                <h2>
+                    <a href="http://www.mamutlove.es/republica-dominicana.html" title="República Dominicana">República Dominicana</a>
+                </h2>
+                <a href="http://www.mamutlove.es/republica-dominicana.html" title="República Dominicana">
+                    <img src="http://www.mamutlove.es/old/img/republica-dominicana-logo.gif" alt="República Dominicana" width="920" height="350">
+                </a>
             </div>
             <div>
-                <h2><a href="http://www.mamutlove.es/smint.html" title="Smint">Smint</a></h2>
-                <a href="http://www.mamutlove.es/smint.html" title="Smint"><img src="http://www.mamutlove.es/img/smint-grafica.gif" alt="Smint" width="920" height="350"></a>
+                <h2>
+                    <a href="http://www.mamutlove.es/smint.html" title="Smint">Smint</a>
+                </h2>
+                <a href="http://www.mamutlove.es/smint.html" title="Smint">
+                    <img src="http://www.mamutlove.es/old/img/smint-grafica.gif" alt="Smint" width="920" height="350">
+                </a>
             </div>
             <div>
-                <h2><a href="http://www.mamutlove.es/spontex.html" title="Spontex">Spontex</a></h2>
-                <a href="http://www.mamutlove.es/spontex.html" title="Spontex"><img src="http://www.mamutlove.es/img/spontex-grafica.gif" alt="Spontex" width="920" height="350"></a>
+                <h2>
+                    <a href="http://www.mamutlove.es/spontex.html" title="Spontex">Spontex</a>
+                </h2>
+                <a href="http://www.mamutlove.es/spontex.html" title="Spontex">
+                    <img src="http://www.mamutlove.es/old/img/spontex-grafica.gif" alt="Spontex" width="920" height="350">
+                </a>
             </div>
             <div>
-                <h2><a href="http://www.mamutlove.es/" title="Mamutlove">Mamutlove</a></h2>
-                <a href="http://www.mamutlove.es/" title="Mamutlove"><img src="http://www.mamutlove.es/img/mamut-love-logo.jpg" alt="Mamut Love says Stop Global Warming" width="920"
-                        height="350"></a>
+                <h2>
+                    <a href="http://www.mamutlove.es/" title="Mamutlove">Mamutlove</a>
+                </h2>
+                <a href="http://www.mamutlove.es/" title="Mamutlove">
+                    <img src="http://www.mamutlove.es/old/img/mamut-love-logo.jpg" alt="Mamut Love says Stop Global Warming" width="920" height="350">
+                </a>
             </div>
             <div>
-                <h2><a href="http://www.mamutlove.es/tomtom.html" title="Tomtom">Tomtom</a></h2>
-                <a href="http://www.mamutlove.es/tomtom.html" title="Tomtom"><img src="http://www.mamutlove.es/img/tomtom-grafica.gif" alt="Tomtom" width="920" height="350"></a>
+                <h2>
+                    <a href="http://www.mamutlove.es/tomtom.html" title="Tomtom">Tomtom</a>
+                </h2>
+                <a href="http://www.mamutlove.es/tomtom.html" title="Tomtom">
+                    <img src="http://www.mamutlove.es/old/img/tomtom-grafica.gif" alt="Tomtom" width="920" height="350">
+                </a>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <h5>WHATEVER FOOTER - All the images use in this page are owned by Mamut Love - <a href="mailto:hola@mamutlove.es">hola@mamutlove.es</a></h5>
+        <h5>WHATEVER FOOTER - All the images use in this page are owned by Mamut Love -
+            <a href="mailto:hola@mamutlove.es">hola@mamutlove.es</a>
+        </h5>
     </footer>
 
 
@@ -105,26 +122,11 @@
                 <div class="u-modal-column--full u-modal-column--animated" data-effect="slide-up">
                     <h1 class="u-modal-title u-modal-txt--animated">Use this container to place your HTML elements according to your needs</h1>
                     <p class="u-modal-txt u-modal-txt--animated">I'm a text</p>
-                    <p class="u-modal-txt u-modal-txt--animated">I'm a text</p>
-                    <!--<ul>
+                    <ul>
                         <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
                         <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
                         <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                        <li class="u-modal-txt u-modal-txt--animated">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, rem, inventore!</li>
-                    </ul>-->
+                    </ul>
                 </div>
             </div>
             <div class="tar">
@@ -143,7 +145,7 @@
                 // auto: true,
                 // veil: "disabled"
             });
-        } ());
+        }());
 
     </script>
 
